updating test